# backend/src/useCases/estoques/FindEstoque/FindEstoqueDTO.ts
@@ -1,0 +1,9 @@
+export interface IFindEstoqueRequestDTO {
+    codigoEstoque: string;
+}
+
+export interface IFindEstoqueResponseDTO {
+    codigoEstoque: string;
+    quantidade: number;
+    codigoProduto: string;
+}
